@@ -1,1 +1,1 @@
-DIST PlayOnLinux_4.2.2.tar.gz 4555320 SHA256 5d2df78dcaa9635722880561874521b107eb7730379b3dcadbf18f1bff13663f SHA512 0cbccadaba8bb64fa7642e2e9bcb1ed9a422f6636d382b29366d04ff24f529d2594ca5671044f0e613d3962b69ca319e397586d11d6228ab0cae6bc8e952a92d WHIRLPOOL fffe8137aca74499598415b7d37e40189e662dc05d032b5460b97b58765e2d2b9bd0acef96f12313c3c8b5566736bb01fab56551760c333cfe051d228bf5643b
+DIST PlayOnLinux_4.2.3.tar.gz 4640300 SHA256 faa4ca6fb67ee73d9c9cc71fa8323497e1b03665578e306b336d54c36d63e40d SHA512 3116b302aa5cede79ee60e7574fdbbf4e5d7565f3827fab002fd0644d67d672b8d26f21a60b12b4a7105310d606cab0ecf27e6ba2f3a949044ce29b27d283775 WHIRLPOOL b3e1026c9962b706b25dd875ce1694075b909b2fdf4349b8405b918a6fdfeec939053280224f6415168cfb35b5da1e1df5165b78b83e133dd7c033b4cbacafa3
